2007-12-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/basic.c:
   Don't parse in comments and fix wrong creation of tags including
   non-tag characters(e.g. '=' sign).


2007-12-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/filebrowser.c:
   Refactor with functions: check_single_selection(),
   is_folder_selected(), get_tree_path_filename() and separate menu
   item callbacks.
   Rename "Open with..." popup item "Open externally" ("..." is usually
   used when the user can input more information).
 * plugins/filebrowser.c:
   Disable popup menu items when there is no selection.


2007-12-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetype_extensions.conf, src/filetypes.c:
   Add *.vala extension to CSharp filetype to support the Vala language.


2007-12-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/keybindings.h, src/plugindata.h:
   Add configurable keybindings for Cut, Copy and Paste.


2007-12-23  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/keybindings.c: Fix inverted move tab first/last commands.
 * src/templates.c:
   Add Python filetype template (patch by Elena of Valhalla, thanks).
 * src/main.c:
   Enable parsing command line options without a valid X display.


2007-12-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c, src/dialogs.c, src/dialogs.h, src/callbacks.c:
   Add combo box input history for Make Custom Target dialog.
   Make dialogs_show_input() automatically activate on pressing enter in
   the GtkEntry, use a callback for input text, and have a 'persistent'
   option to hide the dialog instead of deleting it, using a combo box
   for input text history.
 * src/utils.c:
   Make utils_get_utf8_from_locale(), utils_get_locale_from_utf8()
   NULL-safe.
 * src/utils.c, src/win32.c, src/utils.h, src/win32.h, src/dialogs.c,
   src/search.c: